# fast-mcp

./: .gitignore  AI_INTEGRATION_GUIDE.md  README.md  claude_desktop_config.json  pyproject.toml
examples/: ai_data_exploration.py  ai_interrogation_demo.py  basic_usage.py
fast_mcp/: __init__.py
fast_mcp/client/: __init__.py  client.py
fast_mcp/server/: __init__.py  analytics.duckdb.wal  database.py  server.py
fast_mcp/server/data/: .gitkeep
fast_mcp/server/pipelines/: __init__.py  weather_pipeline.py
src/client/: client.py  pyproject.toml
src/server/: DataManager.py  pyproject.toml  server.py  test_mcp_server.py
