[project]
name = "fast-mcp"
version = "0.1.0"
description = "Playground for MCP server development with FastMCP and DuckDB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "dlt>=1.15.0",
    "duckdb>=1.3.2",
    "fastmcp>=2.12.2",
    "ruff>=0.12.12",
    "httpx>=0.24.0",
    "mcp>=1.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
target-version = "py313"
line-length = 88
select = ["E", "F", "W", "I"]
